--- a/Moussadjal/packages.config
+++ b/Moussadjal/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="5.2.1" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="5.2.1" targetFramework="net472" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
 </packages>
