--- a/Moussadjal/packages.config
+++ b/Moussadjal/packages.config
@@ -4,4 +4,5 @@
   <package id="MaterialDesignColors" version="5.2.1" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="5.2.1" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
+  <package id="ZXing.Net" version="0.16.10" targetFramework="net472" />
 </packages>
