--- a/Moussadjal mobile app/Moussadjal mobile app.csproj
+++ b/Moussadjal mobile app/Moussadjal mobile app.csproj
@@ -62,6 +62,7 @@
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
+		<PackageReference Include="SkiaSharp" Version="3.116.1" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
 		<PackageReference Include="ZXing.Net" Version="0.16.10" />
 		<PackageReference Include="ZXing.Net.Maui" Version="0.4.0" />
